refactor: standardize test command from test:run to test across codebase
- Update package.json scripts to use `test` as primary command, remove `test:run` alias
- Replace `pnpm test:run` with `pnpm test` in all documentation (README, docs/*, maintenance.md)
- Update deploy.yml workflow to use `pnpm ops check all` instead of `pnpm ops:check`
- Remove shorthand ops scripts (ops:infra:supabase, ops:infra:upstash, ops:ai:config, ops:check)
- Simplify test:ci script to use `--reporter=dot --reporter=github-actions` without

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
 
           if [ -n "$has_supabase" ] || [ -n "$has_upstash" ]; then
             echo "Running infrastructure validation..."
-            pnpm ops:check || echo "::warning::Infrastructure check failed (non-blocking)"
+            pnpm ops check all || echo "::warning::Infrastructure check failed (non-blocking)"
           else
             echo "Skipping infra check - credentials not configured"
           fi
