--- a/package.json
+++ b/package.json
@@ -12,32 +12,29 @@
     "biome:check": "biome check ./src ./e2e ./scripts",
     "biome:fix": "biome check ./src ./e2e ./scripts --fix",
     "type-check": "tsc --noEmit",
-    "test": "NODE_OPTIONS='--max-old-space-size=4096' vitest run",
-    "test:run": "vitest run",
+    "test": "vitest run",
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
     "test:benchmark": "node scripts/run-benchmark.mjs",
     "test:quick": "vitest run --reporter=dot",
-    "test:ci": "NODE_OPTIONS='--max-old-space-size=4096' vitest run --maxWorkers=2 --reporter=dot",
-    "test:dev-fast": "vitest --reporter=default",
+    "test:ci": "vitest run --reporter=dot --reporter=github-actions",
     "test:unit": "vitest run --project=unit",
+    "test:schemas": "vitest run --project=schemas",
     "test:components": "vitest run --project=component",
     "test:api": "vitest run --project=api",
     "test:integration": "vitest run --project=integration",
+    "test:shard": "vitest run --reporter=blob --shard=$VITEST_SHARD",
+    "test:pr": "vitest run --changed origin/main --passWithNoTests",
     "test:upstash:unit": "vitest run src/test/upstash/upstash.unit.test.ts",
     "test:upstash:int": "UPSTASH_USE_EMULATOR=1 vitest run --project=integration src/__tests__/contracts/upstash-int.integration.test.ts",
     "test:upstash:smoke": "UPSTASH_SMOKE=1 vitest run --project=integration src/__tests__/contracts/upstash.smoke.integration.test.ts",
     "test:changed": "vitest run --changed",
     "test:affected": "vitest run --changed --passWithNoTests && git diff -z --name-only HEAD -- 'src/**/*.ts' 'src/**/*.tsx' ':!**/*.test.ts' ':!**/*.test.tsx' | xargs -0 -r vitest related --run --passWithNoTests",
-    "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob",
-    "test:merge": "vitest run --merge-reports",
+    "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob --shard=$VITEST_SHARD",
+    "test:merge": "vitest --merge-reports",
     "test:e2e": "playwright test",
     "ops": "tsx scripts/ops.ts",
-    "ops:infra:supabase": "pnpm ops infra check supabase",
-    "ops:infra:upstash": "pnpm ops infra check upstash",
-    "ops:ai:config": "pnpm ops ai check config",
-    "ops:check": "pnpm ops check all",
     "test:analyze": "pnpm ops test analyze failures",
     "test:analyze:all": "pnpm ops test analyze all",
     "boundary:check": "node scripts/check-boundaries.mjs"
