--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/postgrest-js": "^2.87.2",
+    "@supabase/postgrest-js": "^2.87.3",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.87.2",
+    "@supabase/supabase-js": "^2.87.3",
     "@tanstack/react-query": "^5.90.12",
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.7",
@@ -122,7 +122,7 @@
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "web-vitals": "^5.1.0",
-    "zod": "^4.2.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -141,7 +141,7 @@
     "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
     "@types/luxon": "^3.7.1",
-    "@types/node": "25.0.2",
+    "@types/node": "^25.0.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
