fix(build): restore build safety and CI baseline
- Fix Server Actions build blocker by removing non-serializable class
  export from "use server" module (REL-001)
- Add production build step to CI workflow with stubbed env vars (DX-002)
- Add .next/cache to CI caching for faster builds
- Install missing OTEL deps as direct dependencies for pnpm (DX-001)
- Remove invalid turbopack.root relative path config (DX-003)
- Fix Vitest coverage thresholds to use correct v4 config shape and
  enforce realistic thresholds (TEST-001)

Verified: pnpm build, pnpm type-check, pnpm test:affected all pass.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,14 @@ jobs:
       - name: TypeScript type check
         run: pnpm type-check
 
+      - name: Production build
+        run: pnpm build
+        env:
+          # Stub required env vars for build (no secrets needed)
+          NEXT_PUBLIC_SITE_URL: 'https://example.com'
+          NEXT_PUBLIC_SUPABASE_URL: 'https://example.supabase.co'
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: 'stub-key-for-build-only'
+
       - name: Unit tests (quick, no coverage)
         env:
           VITEST_POOL: threads
