refactor(env): canonicalize base URL origin config
Remove ad-hoc NEXT_PUBLIC_APP_URL usage and standardize on existing
origin helpers throughout the codebase.

Changes:
- Replace manual origin construction in calendar-connect-client.tsx
  with getClientOrigin()
- Replace NEXT_PUBLIC_APP_URL fallback in booking.ts telemetry
  with getClientOrigin()
- Remove NEXT_PUBLIC_APP_URL from .env.example and .env.test.example
- Update docs to reflect canonical variables:
  - Server-side: APP_BASE_URL
  - Client-side: NEXT_PUBLIC_SITE_URL (canonical)
- Add tests for client origin helper (7 tests)

The canonical env variables are already validated in the Zod schemas
(APP_BASE_URL in envSchema, NEXT_PUBLIC_SITE_URL in clientEnvSchema).
This change eliminates an undocumented, unvalidated env variable that
was causing inconsistency.

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,9 @@
 NODE_ENV=development
 CI=false
 PORT=3000
+# Server-side origin (API routes, server actions)
 APP_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Client-side origin (OAuth redirects, client components) - canonical variable
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=TripSage
