--- a/.env.test.example
+++ b/.env.test.example
@@ -5,8 +5,9 @@
 NODE_ENV=test
 CI=false
 PORT=3000
+# Server-side origin (API routes, server actions)
 APP_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Client-side origin (OAuth redirects, client components) - canonical variable
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=TripSage
