fix(pr): resolve review comments for build baseline PR
- Use more realistic stub environment variables in CI build step:
  - Supabase URL now uses standard format (abcd1234.supabase.co)
  - ANON_KEY now uses realistic JWT stub format
- Fix malformed Simon Willison blog URLs:
  - Update from /2025/Mar/2/ to /2023/May/3/ format
  - Ensures links are valid and accessible

Verified: pnpm build succeeds with new env var stubs.
Resolves PR #563 review comments.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,8 +96,8 @@ jobs:
         env:
           # Stub required env vars for build (no secrets needed)
           NEXT_PUBLIC_SITE_URL: 'https://example.com'
-          NEXT_PUBLIC_SUPABASE_URL: 'https://example.supabase.co'
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: 'stub-key-for-build-only'
+          NEXT_PUBLIC_SUPABASE_URL: 'https://abcd1234.supabase.co'
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJzdWJhYmFzZS1hbm9uIiwiaWF0IjoxNjAwMDAwMDAwfQ.dQw0w9WgXcQKZQ2Qw4w9WgXcQKZQ'
 
       - name: Unit tests (quick, no coverage)
         env:
