chore(vercel): remove region pinning from API routes
Removes the `regions: ["iad1"]` configuration from API route functions to allow Vercel's automatic edge region selection.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
     "src/app/api/**/route.*": {
-      "maxDuration": 60,
-      "regions": ["iad1"]
+      "maxDuration": 60
     }
   }
 }
