fix: resolve all PR #567 review comments
- Add coverage-milestones.md with incremental coverage targets (Phase 0 → Phase 2+)
  and link from testing.md per CodeRabbit request
- Fix semantic versioning: 1.16.1 → 1.1.0 (minor bump per Copilot review)
- Replace fake Supabase anon key with proper JWT format in CI workflow
- Add clarifying comments to cache action explaining generic 'caches' key prefix
  and one-time cache invalidation (acceptable for config improvements)
- vercel.json: regions key removal is intentional cleanup (Next.js defaults to iad1)

Resolves review threads in PR #567 across testing, versioning, CI, and config.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
           # Stub required env vars for build (no secrets needed)
           NEXT_PUBLIC_SITE_URL: 'https://example.com'
           NEXT_PUBLIC_SUPABASE_URL: 'https://abcd1234.supabase.co'
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: 'fake_anon_key_for_ci_build_only_do_not_use'
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJjaV9idWlsZF9vbmx5IiwiaWF0IjoxNjAwMDAwMDAwfQ.dummysignature'
 
       - name: Unit tests (quick, no coverage)
         env:
