--- a/.github/actions/cache-vite-vitest/action.yml
+++ b/.github/actions/cache-vite-vitest/action.yml
@@ -6,12 +6,9 @@ runs:
     - name: Cache Vite/Vitest/TS/Next.js caches
       uses: actions/cache@v4
       with:
-        # Generic key prefix 'caches' to cover Vite, Vitest, TS, and Next.js build caches.
-        # Note: Changing from 'vite-vitest-' key causes one-time cache miss on merge; this is acceptable
-        # for configuration improvements. Descriptor was broadened to reflect full cache scope.
-        key: ${{ runner.os }}-caches-${{ hashFiles('pnpm-lock.yaml','vitest.config.ts','tsconfig.json','package.json','next.config.ts') }}
+        key: ${{ runner.os }}-frontend-build-${{ hashFiles('pnpm-lock.yaml','vitest.config.ts','tsconfig.json','package.json','next.config.ts') }}
         restore-keys: |
-          ${{ runner.os }}-caches-
+          ${{ runner.os }}-frontend-build-
         path: |
           node_modules/.vite
           node_modules/.vitest
