--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,11 +71,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6.0.1
-        with:
-          fetch-depth: 0
 
-      - name: Fetch main (diff checks)
-        run: git fetch --no-tags origin main
+      - name: Fetch main for diff checks
+        run: git fetch --depth=1 --no-tags origin main
 
       - name: Set up Node
         uses: actions/setup-node@v6
