--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,9 +71,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6.0.1
+        with:
+          fetch-depth: 0
 
       - name: Fetch main for diff checks
-        run: git fetch --depth=1 --no-tags origin main
+        run: git fetch --no-tags origin main
 
       - name: Set up Node
         uses: actions/setup-node@v6
