chore(config): update env templates and next config

--- a/.env.test.example
+++ b/.env.test.example
@@ -77,6 +77,8 @@ RESEND_FROM_EMAIL=noreply@test.local
 RESEND_FROM_NAME="TripSage QA"
 COLLAB_WEBHOOK_URL=
 HMAC_SECRET=test-hmac-secret
+TELEMETRY_AI_DEMO_KEY=test-telemetry-ai-demo-key-123456
+TELEMETRY_HASH_SECRET=test-telemetry-hash-secret-1234567890123456
 MEM0_API_KEY=
 
 # ---- Travel APIs -----------------------------------------------------------
@@ -103,3 +105,4 @@ BACKEND_API_URL=http://localhost:8001
 # ---- Flags -----------------------------------------------------------------
 ANALYZE=false
 DEBUG=true
+ENABLE_AI_DEMO=false
