--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,8 @@ RESEND_FROM_EMAIL=noreply@example.com
 RESEND_FROM_NAME=TripSage
 COLLAB_WEBHOOK_URL=
 HMAC_SECRET=
+TELEMETRY_AI_DEMO_KEY=
+TELEMETRY_HASH_SECRET= # required in production
 MEM0_API_KEY=
 
 # ---------------------------------------------------------------------------
@@ -118,3 +120,4 @@ BACKEND_API_URL=http://localhost:8001
 # ---------------------------------------------------------------------------
 ANALYZE=false
 DEBUG=false
+ENABLE_AI_DEMO=false
