--- a/.env.example
+++ b/.env.example
@@ -86,8 +86,12 @@ RESEND_FROM_EMAIL=noreply@example.com
 RESEND_FROM_NAME=TripSage
 COLLAB_WEBHOOK_URL=
 HMAC_SECRET=
+# Telemetry secrets (optional, but if set must be ≥32 chars for cryptographic security)
+# - TELEMETRY_AI_DEMO_KEY: Authenticates AI demo endpoint requests
+# - TELEMETRY_HASH_SECRET: HMAC secret for hashing telemetry identifiers
+# App fails to start if either is set to fewer than 32 characters.
 TELEMETRY_AI_DEMO_KEY=
-TELEMETRY_HASH_SECRET= # required in production
+TELEMETRY_HASH_SECRET=
 MEM0_API_KEY=
 
 # ---------------------------------------------------------------------------
