refactor(stores): optimize middleware and consolidate schemas
- Consolidated Zod schema primitives (currency, date strings) to shared/time.ts and shared/money.ts
- Added withComputed middleware to 7 stores for automatic derived state computation
- Added devtools middleware to 3 stores for improved debugging visibility
- Refactored chat-messages.ts: removed subscribe hack, replaced with computed middleware
- Refactored agent-status-store.ts: removed custom withDerivedCollections helper
- Modularized currency-store.ts into focused slices (conversion, favorites, management)
- Added deep-equal utility for value comparison in stores and components
- Removed 8 unused test helpers and functions (trip-store.ts, store.ts, query.tsx, mock.ts)

Testing: pnpm type-check, pnpm test:affected (1141 tests, all passing)

--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,15 @@ Thumbs.db
 .cursorindexingignore
 CLAUDE.md
 
-# repomix
+# repomix and AI-assisted code review artifacts
 repomix-output.*
+context-review*.md
+GEMINI-REVIEW*.md
+IMPLEMENTATION-PROMPTS*.md
+QUICK-START*.md
+CONTEXT-OPTIMIZATION*.md
+COMPREHENSIVE-REVIEW*.md
+AI-REVIEW*.md
 
 # Logs
 dev-debug.log
