--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
     "lint": "biome lint ./src ./e2e ./scripts",
     "format:biome": "biome format ./src --write",
     "biome:check": "biome check ./src ./e2e ./scripts",
@@ -15,7 +15,7 @@
     "test": "vitest run",
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
+    "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8 && node scripts/check-coverage-critical.mjs",
     "test:benchmark": "node scripts/run-benchmark.mjs",
     "test:quick": "vitest run --reporter=dot",
     "test:ci": "vitest run --reporter=dot --reporter=github-actions",
@@ -39,6 +39,7 @@
     "test:analyze:all": "pnpm ops test analyze all",
     "boundary:check": "node scripts/check-boundaries.mjs",
     "ai-tools:check": "node scripts/check-ai-tools.mjs",
+    "check:fileoverviews": "node scripts/check-fileoverviews.mjs",
     "check:no-new-unknown-casts": "node scripts/check-no-new-unknown-casts.mjs",
     "check:no-unknown-casts": "node scripts/check-no-unknown-casts.mjs",
     "deps:cycles": "madge --circular --extensions ts,tsx --ts-config ./tsconfig.json src/ai/agents"
