--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "pre-commit": "pnpm check:no-secrets:staged"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "3.0.0-beta.83",
-    "@ai-sdk/openai": "3.0.0-beta.96",
-    "@ai-sdk/react": "3.0.0-beta.153",
-    "@ai-sdk/togetherai": "2.0.0-beta.49",
-    "@ai-sdk/xai": "3.0.0-beta.55",
+    "@ai-sdk/anthropic": "3.0.0",
+    "@ai-sdk/openai": "3.0.0",
+    "@ai-sdk/react": "3.0.0",
+    "@ai-sdk/togetherai": "2.0.0",
+    "@ai-sdk/xai": "3.0.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
@@ -96,15 +96,15 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/postgrest-js": "^2.87.3",
+    "@supabase/postgrest-js": "^2.89.0",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.87.3",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.12",
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.7",
     "@upstash/redis": "^1.35.8",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.0-beta.150",
+    "ai": "6.0.0",
     "amadeus": "^11.0.0",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
@@ -116,24 +116,24 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
-    "import-in-the-middle": "^2.0.0",
+    "import-in-the-middle": "^2.0.1",
     "js-tiktoken": "^1.0.21",
-    "lucide-react": "^0.561.0",
+    "lucide-react": "^0.562.0",
     "mem0ai": "^2.1.38",
     "motion": "^12.23.26",
-    "next": "^16.0.10",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.68.0",
+    "react-hook-form": "^7.69.0",
     "recharts": "^3.6.0",
     "require-in-the-middle": "^8.0.1",
     "resend": "^6.6.0",
     "shiki": "^3.20.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.10",
-    "stripe": "^20.0.0",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
@@ -142,8 +142,8 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.9",
-    "@next/bundle-analyzer": "^16.0.10",
+    "@biomejs/biome": "^2.3.10",
+    "@next/bundle-analyzer": "^16.1.0",
     "@playwright/test": "^1.57.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -157,19 +157,19 @@
     "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
-    "@vitest/coverage-v8": "^4.0.15",
-    "@vitest/ui": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "jose": "^6.1.3",
     "jscodeshift": "^17.3.0",
     "jsdom": "^27.3.0",
     "jsondiffpatch": "^0.7.3",
-    "madge": "^6.1.0",
+    "madge": "^8.0.0",
     "msw": "^2.12.4",
     "semantic-release": "^25.0.2",
     "simple-git-hooks": "^2.13.1",
@@ -178,7 +178,7 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "unified": "^11.0.5",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.16"
   },
   "engines": {
     "node": "24.x",
