--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:analyze": "ANALYZE=true next build",
+    "build:analyze": "pnpm build && next experimental-analyze --output",
     "start": "node .next/standalone/server.js",
     "prepare": "simple-git-hooks",
     "lint": "biome lint ./src ./e2e ./scripts",
@@ -68,15 +68,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/core": "^2.2.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
     "@opentelemetry/instrumentation": "^0.208.0",
     "@opentelemetry/instrumentation-fetch": "^0.208.0",
     "@opentelemetry/resources": "^2.2.0",
-    "@opentelemetry/sdk-node": "^0.208.0",
     "@opentelemetry/sdk-trace-base": "^2.2.0",
     "@opentelemetry/sdk-trace-web": "^2.2.0",
-    "@opentelemetry/semantic-conventions": "^1.38.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -84,10 +81,7 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-menubar": "^1.1.16",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -101,7 +95,6 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/postgrest-js": "^2.89.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.12",
@@ -114,7 +107,6 @@
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "file-type": "^21.2.0",
     "html-to-text": "^9.0.5",
@@ -141,14 +133,12 @@
     "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
-    "vaul": "^1.1.2",
     "web-vitals": "^5.1.0",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
-    "@next/bundle-analyzer": "^16.1.1",
     "@playwright/test": "^1.57.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -160,7 +150,6 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/google.maps": "^3.58.1",
     "@types/html-to-text": "^9.0.4",
-    "@types/jscodeshift": "^17.3.0",
     "@types/luxon": "^3.7.1",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
@@ -169,11 +158,7 @@
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
     "babel-plugin-react-compiler": "^1.0.0",
-    "conventional-changelog-conventionalcommits": "^9.1.0",
-    "jose": "^6.1.3",
-    "jscodeshift": "^17.3.0",
     "jsdom": "^27.3.0",
-    "jsondiffpatch": "^0.7.3",
     "knip": "^5.77.1",
     "madge": "^8.0.0",
     "msw": "^2.12.4",
