feat: Add AI SDK version contract check script and update docs to stable AI SDK v6, Next.js, Stripe, Resend versions, alongside various refactor context documents and component updates.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,9 @@ jobs:
       - name: AI tool guardrails check
         run: pnpm ai-tools:check
 
+      - name: AI SDK version contract check
+        run: pnpm check:ai-sdk-version-contract
+
       - name: Dependency cycle check (AI agents)
         run: pnpm deps:cycles
 
