fix(pr-617): address CodeRabbit review threads
Threads: PRRT_kwDOOm4ohs5oKTMg, PRRT_kwDOOm4ohs5oKTMr, PRRT_kwDOOm4ohs5oKTMv, PRRT_kwDOOm4ohs5oKTMy, PRRT_kwDOOm4ohs5oKTMz, PRRT_kwDOOm4ohs5oKTM2, PRRT_kwDOOm4ohs5oKTM6, PRRT_kwDOOm4ohs5oKTM-

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test:e2e:chromium": "playwright test --project=chromium",
     "supabase:start": "pnpm dlx supabase@2.70.5 start",
     "supabase:stop": "pnpm dlx supabase@2.70.5 stop",
+    "supabase:status": "pnpm dlx supabase@2.70.5 status",
     "supabase:db:reset": "pnpm dlx supabase@2.70.5 db reset",
     "supabase:typegen": "pnpm dlx supabase@2.70.5 gen types typescript --local --schema auth,public,memories,storage > src/lib/supabase/database.types.ts",
     "ops": "tsx scripts/ops.ts",
