--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tripsage-ai-frontend",
   "version": "1.22.5",
   "private": true,
+  "packageManager": "pnpm@10.26.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -142,7 +143,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.10",
+    "@biomejs/biome": "^2.3.11",
     "@playwright/test": "^1.57.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -163,7 +164,7 @@
     "@vitest/ui": "^4.0.16",
     "babel-plugin-react-compiler": "^1.0.0",
     "jsdom": "^27.4.0",
-    "knip": "^5.78.0",
+    "knip": "^5.80.0",
     "madge": "^8.0.0",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
