chore(tooling): pin pnpm + bump supabase cli

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -21,8 +21,8 @@ RUN apk add --no-cache \
 COPY package.json pnpm-lock.yaml ./
 
 # Install pnpm and dependencies
-RUN npm install -g pnpm@latest && \
-    pnpm install
+RUN npm install -g pnpm@10.27.0 && \
+    pnpm install --frozen-lockfile
 
 # Copy application code
 COPY . .
