--- a/package.json
+++ b/package.json
@@ -122,9 +122,11 @@
     "import-in-the-middle": "^2.0.1",
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
     "motion": "^12.24.7",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.2",
