--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,7 +144,7 @@ jobs:
       - name: Determine if prod CSP check needed
         id: prod_csp
         run: |
-          if git diff --name-only origin/main...HEAD | grep -Eq '^(src/proxy\\.ts|playwright\\.prod\\.config\\.ts|scripts/e2e-webserver-prod\\.mjs|package\\.json|pnpm-lock\\.yaml|next\\.config\\.ts)$'; then
+          if git diff --name-only origin/main...HEAD | grep -Eq '^(src/proxy\\.ts|src/app/layout\\.tsx|src/instrumentation-client\\.ts|playwright\\.prod\\.config\\.ts|scripts/e2e-webserver-prod\\.mjs|package\\.json|pnpm-lock\\.yaml|next\\.config\\.ts)$'; then
             echo "run=true" >> "$GITHUB_OUTPUT"
           else
             echo "run=false" >> "$GITHUB_OUTPUT"
