--- a/.env.example
+++ b/.env.example
@@ -81,6 +81,7 @@ OPENWEATHERMAP_API_KEY=
 # Payments
 # ---------------------------------------------------------------------------
 STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 
 # ---------------------------------------------------------------------------
