--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.19",
     "@upstash/qstash": "^2.8.4",
-    "@upstash/ratelimit": "2.0.7",
+    "@upstash/ratelimit": "2.0.8",
     "@upstash/redis": "^1.36.1",
     "@vercel/otel": "^2.1.0",
     "ai": "6.0.39",
@@ -116,17 +116,17 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
-    "import-in-the-middle": "^2.0.1",
+    "import-in-the-middle": "2.0.4",
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.562.0",
     "mammoth": "^1.11.0",
-    "motion": "^12.25.0",
+    "motion": "12.27.0",
     "next": "^16.1.3",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-error-boundary": "^6.0.3",
+    "react-error-boundary": "6.1.0",
     "react-hook-form": "^7.71.1",
     "recharts": "^3.6.0",
     "require-in-the-middle": "^8.0.1",
@@ -134,7 +134,7 @@
     "shiki": "^3.21.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.11",
-    "stripe": "^20.1.2",
+    "stripe": "20.2.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
     "web-vitals": "^5.1.0",
@@ -168,7 +168,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "jsdom": "^27.4.0",
-    "knip": "^5.80.2",
+    "knip": "5.82.0",
     "madge": "^8.0.0",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
