chore(env): sanitize example templates

--- a/.env.test.example
+++ b/.env.test.example
@@ -34,11 +34,11 @@ PGVECTOR_HNSW_EF_SEARCH_DEFAULT=96
 MEMORIES_RETENTION_DAYS=180
 
 # ---- Upstash / QStash (HTTP-only) -----------------------------------------
-UPSTASH_REDIS_REST_URL=https://test-redis.upstash.io
-UPSTASH_REDIS_REST_TOKEN=test-upstash-token
-QSTASH_TOKEN=test-qstash-token
-QSTASH_CURRENT_SIGNING_KEY=test-qstash-current
-QSTASH_NEXT_SIGNING_KEY=test-qstash-next
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+QSTASH_TOKEN=
+QSTASH_CURRENT_SIGNING_KEY=
+QSTASH_NEXT_SIGNING_KEY=
 # Optional: local emulator endpoints (used by test:upstash:int)
 #UPSTASH_USE_EMULATOR=1
 #UPSTASH_EMULATOR_URL=http://localhost:8079
@@ -50,46 +50,47 @@ QSTASH_NEXT_SIGNING_KEY=test-qstash-next
 #UPSTASH_SMOKE=1
 
 # ---- AI providers / gateway ------------------------------------------------
-AI_GATEWAY_API_KEY=test-gateway-key
+AI_GATEWAY_API_KEY=
 AI_GATEWAY_URL=https://ai-gateway.vercel.sh/v1
-OPENAI_API_KEY=test-openai
-OPENROUTER_API_KEY=test-openrouter
-ANTHROPIC_API_KEY=test-anthropic
-XAI_API_KEY=test-xai
-EMBEDDINGS_API_KEY=test-embeddings
+OPENAI_API_KEY=
+OPENROUTER_API_KEY=
+ANTHROPIC_API_KEY=
+XAI_API_KEY=
+EMBEDDINGS_API_KEY=
 
 # ---- Search / crawling -----------------------------------------------------
-FIRECRAWL_API_KEY=test-firecrawl-key
+FIRECRAWL_API_KEY=
 FIRECRAWL_BASE_URL=https://api.firecrawl.dev/v2
 
 # ---- Maps / weather --------------------------------------------------------
-GOOGLE_MAPS_SERVER_API_KEY=test-maps-server
-NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=test-maps-browser
-OPENWEATHERMAP_API_KEY=test-weather
+GOOGLE_MAPS_SERVER_API_KEY=
+NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=
+OPENWEATHERMAP_API_KEY=
 
 # ---- Payments --------------------------------------------------------------
-STRIPE_SECRET_KEY=test-stripe-secret
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=test-stripe-pk
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 
 # ---- Email / notifications -------------------------------------------------
-RESEND_API_KEY=test-resend-key
+RESEND_API_KEY=
 RESEND_FROM_EMAIL=noreply@test.local
 RESEND_FROM_NAME="TripSage QA"
 COLLAB_WEBHOOK_URL=
-HMAC_SECRET=test-hmac-secret
-TELEMETRY_AI_DEMO_KEY=test-telemetry-ai-demo-key-123456
-TELEMETRY_HASH_SECRET=test-telemetry-hash-secret-1234567890123456
+HMAC_SECRET=
+TELEMETRY_AI_DEMO_KEY=
+TELEMETRY_HASH_SECRET=
 
 # ---- Travel APIs -----------------------------------------------------------
-DUFFEL_ACCESS_TOKEN=test-duffel-token
-DUFFEL_API_KEY=test-duffel-key
-EPS_API_KEY=test-eps-key
-EPS_API_SECRET=test-eps-secret
+DUFFEL_ACCESS_TOKEN=
+DUFFEL_API_KEY=
+EPS_API_KEY=
+EPS_API_SECRET=
 EPS_BASE_URL=https://api.ean.com/2/rapid
 EPS_DEFAULT_CUSTOMER_IP=0.0.0.0
 EPS_DEFAULT_USER_AGENT=TripSage/1.0 (+https://tripsage.ai)
-AMADEUS_CLIENT_ID=test-amadeus-client-id
-AMADEUS_CLIENT_SECRET=test-amadeus-client-secret
+AMADEUS_CLIENT_ID=
+AMADEUS_CLIENT_SECRET=
 AMADEUS_ENV=test
 
 # ---- Analytics (optional) --------------------------------------------------
