feat(supabase): add deterministic local seed data

--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "supabase:status": "pnpm dlx supabase@2.71.0 status",
     "supabase:db:reset": "pnpm dlx supabase@2.71.0 db reset",
     "supabase:bootstrap": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:status",
+    "supabase:seed:dev": "tsx scripts/seed/supabase-local.ts --profile=dev",
+    "supabase:seed:e2e": "tsx scripts/seed/supabase-local.ts --profile=e2e",
+    "supabase:reset:dev": "pnpm supabase:db:reset && pnpm supabase:seed:dev",
+    "supabase:reset:e2e": "pnpm supabase:db:reset && pnpm supabase:seed:e2e",
     "supabase:typegen": "pnpm dlx supabase@2.71.0 gen types typescript --local --schema auth,public,memories,storage > src/lib/supabase/database.types.ts",
     "ops": "tsx scripts/ops.ts",
     "test:analyze": "pnpm ops test analyze failures",
