--- a/.env.local.example
+++ b/.env.local.example
@@ -98,7 +98,7 @@ EPS_API_KEY=
 EPS_API_SECRET=
 EPS_BASE_URL=https://api.ean.com/2/rapid
 EPS_DEFAULT_CUSTOMER_IP=0.0.0.0
-EPS_DEFAULT_USER_AGENT=TripSage/1.0 (+https://tripsage.ai)
+EPS_DEFAULT_USER_AGENT="TripSage/1.0 (+https://tripsage.ai)"
 
 # ---------------------------------------------------------------------------
 # Analytics (optional)
