--- a/package.json
+++ b/package.json
@@ -35,15 +35,21 @@
     "test:merge": "vitest --merge-reports",
     "test:e2e": "playwright test",
     "test:e2e:chromium": "playwright test --project=chromium",
-    "supabase:start": "pnpm dlx supabase@2.71.0 start",
+    "supabase:start": "pnpm dlx supabase@2.71.0 start --yes",
     "supabase:stop": "pnpm dlx supabase@2.71.0 stop",
     "supabase:status": "pnpm dlx supabase@2.71.0 status",
-    "supabase:db:reset": "pnpm dlx supabase@2.71.0 db reset",
+    "supabase:db:reset": "pnpm dlx supabase@2.71.0 db reset --yes",
     "supabase:bootstrap": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:status",
     "supabase:seed:dev": "tsx scripts/seed/supabase-local.ts --profile=dev",
     "supabase:seed:e2e": "tsx scripts/seed/supabase-local.ts --profile=e2e",
-    "supabase:reset:dev": "pnpm supabase:db:reset && pnpm supabase:seed:dev",
-    "supabase:reset:e2e": "pnpm supabase:db:reset && pnpm supabase:seed:e2e",
+    "supabase:seed:payments": "tsx scripts/seed/supabase-local.ts --profile=payments",
+    "supabase:seed:calendar": "tsx scripts/seed/supabase-local.ts --profile=calendar",
+    "supabase:seed:edge-cases": "tsx scripts/seed/supabase-local.ts --profile=edge-cases",
+    "supabase:reset:dev": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:dev",
+    "supabase:reset:e2e": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:e2e",
+    "supabase:reset:payments": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:payments",
+    "supabase:reset:calendar": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:calendar",
+    "supabase:reset:edge-cases": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:edge-cases",
     "supabase:typegen": "pnpm dlx supabase@2.71.0 gen types typescript --local --schema auth,public,memories,storage > src/lib/supabase/database.types.ts",
     "ops": "tsx scripts/ops.ts",
     "test:analyze": "pnpm ops test analyze failures",
@@ -71,7 +77,8 @@
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.15",
     "@ai-sdk/openai": "3.0.12",
-    "@ai-sdk/react": "3.0.41",
+    "@ai-sdk/provider": "3.0.4",
+    "@ai-sdk/react": "3.0.43",
     "@ai-sdk/togetherai": "2.0.13",
     "@ai-sdk/xai": "3.0.26",
     "@hookform/resolvers": "^5.2.2",
@@ -111,7 +118,7 @@
     "@upstash/ratelimit": "2.0.8",
     "@upstash/redis": "^1.36.1",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.39",
+    "ai": "6.0.41",
     "amadeus": "^11.0.0",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
@@ -125,7 +132,7 @@
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.562.0",
     "mammoth": "^1.11.0",
-    "motion": "12.27.0",
+    "motion": "12.27.1",
     "next": "^16.1.3",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
@@ -159,7 +166,7 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/google.maps": "^3.58.1",
     "@types/html-to-text": "^9.0.4",
@@ -173,7 +180,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "jsdom": "^27.4.0",
-    "knip": "5.82.0",
+    "knip": "5.82.1",
     "madge": "^8.0.0",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
@@ -218,5 +225,10 @@
       "esbuild",
       "msw"
     ]
-  }
+  },
+  "workspaces": [
+    ".",
+    "!opensrc/**",
+    "!**/node_modules/**"
+  ]
 }
