chore(env): add TOGETHER_AI_API_KEY to environment templates

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ OPENAI_API_KEY=
 OPENROUTER_API_KEY=
 ANTHROPIC_API_KEY=
 XAI_API_KEY=
+TOGETHER_AI_API_KEY=
 EMBEDDINGS_API_KEY=
 
 # ---------------------------------------------------------------------------
