--- a/.env.local.example
+++ b/.env.local.example
@@ -20,7 +20,10 @@ NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 # ---------------------------------------------------------------------------
 # Local Supabase: run `pnpm supabase:start`, then `pnpm supabase:status` for values.
 NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
-# Supabase “publishable” or “anon” key (client)
+# Supabase public key (client). Set ONE of:
+# - NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY (preferred, `sb_publishable_...`)
+# - NEXT_PUBLIC_SUPABASE_ANON_KEY (legacy name)
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 # Supabase “service role” key (server)
 SUPABASE_SERVICE_ROLE_KEY=
@@ -54,6 +57,7 @@ OPENAI_API_KEY=
 OPENROUTER_API_KEY=
 ANTHROPIC_API_KEY=
 XAI_API_KEY=
+TOGETHER_AI_API_KEY=
 EMBEDDINGS_API_KEY=
 
 # ---------------------------------------------------------------------------
