--- a/.env.test.example
+++ b/.env.test.example
@@ -15,6 +15,10 @@ NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 
 # ---- Supabase ------------------------------------------------------------
 NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+# Supabase public key for tests. Set ONE of:
+# - NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY (preferred, `sb_publishable_...`)
+# - NEXT_PUBLIC_SUPABASE_ANON_KEY (legacy name)
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=anon-test-key
 SUPABASE_SERVICE_ROLE_KEY=service-role-test
 SUPABASE_JWT_SECRET=changeme-min-32-chars-test-secret-1
@@ -56,6 +60,7 @@ OPENAI_API_KEY=
 OPENROUTER_API_KEY=
 ANTHROPIC_API_KEY=
 XAI_API_KEY=
+TOGETHER_AI_API_KEY=
 EMBEDDINGS_API_KEY=
 
 # ---- Search / crawling -----------------------------------------------------
