--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,8 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 # Public key (set ONE):
 # - Preferred (new): publishable key (sb_publishable_...)
 # - Legacy: anon key
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=your-publishable-key
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_...
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 SUPABASE_JWT_SECRET=changeme-min-32-chars-xxxxxxxxxxxxxxxx
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
