chore: clean up task documentation and remove obsolete files
- Removed INDEX.md, T-000-template.md, and various task files related to completed tasks (T-001 to T-011).
- Updated .gitignore to exclude new task directories.
- Consolidated task documentation for clarity and relevance.

--- a/.gitignore
+++ b/.gitignore
@@ -255,14 +255,11 @@ scan-results/
 # Project specific files
 .agent/
 supabase/.temp/
-
 docs/prompts/
+
 # Generated review artifacts
-
 docs/implementation/
-
-# Archived docs not part of source
-
+docs/tasks
 
 # Frontend workspace (consolidated from frontend/.gitignore)
 next-env.d.ts
