chore(supabase): update Supabase scripts and dependencies to latest versions

--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
     "test:merge": "vitest --merge-reports",
     "test:e2e": "playwright test",
     "test:e2e:chromium": "playwright test --project=chromium",
-    "supabase:start": "pnpm dlx supabase@2.71.0 start --yes",
-    "supabase:stop": "pnpm dlx supabase@2.71.0 stop",
-    "supabase:status": "pnpm dlx supabase@2.71.0 status",
-    "supabase:db:reset": "pnpm dlx supabase@2.71.0 db reset --yes",
-    "supabase:bootstrap": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:status",
+    "supabase:start": "tsx scripts/supabase/start.ts",
+    "supabase:stop": "tsx scripts/supabase/stop.ts",
+    "supabase:status": "pnpm dlx supabase@2.72.8 status",
+    "supabase:db:reset": "tsx scripts/supabase/db-reset.ts",
+    "supabase:bootstrap": "tsx scripts/supabase/bootstrap.ts",
     "supabase:seed:dev": "tsx scripts/seed/supabase-local.ts --profile=dev",
     "supabase:seed:e2e": "tsx scripts/seed/supabase-local.ts --profile=e2e",
     "supabase:seed:payments": "tsx scripts/seed/supabase-local.ts --profile=payments",
     "supabase:seed:calendar": "tsx scripts/seed/supabase-local.ts --profile=calendar",
     "supabase:seed:edge-cases": "tsx scripts/seed/supabase-local.ts --profile=edge-cases",
-    "supabase:reset:dev": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:dev",
-    "supabase:reset:e2e": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:e2e",
-    "supabase:reset:payments": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:payments",
-    "supabase:reset:calendar": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:calendar",
-    "supabase:reset:edge-cases": "pnpm supabase:start && pnpm supabase:db:reset && pnpm supabase:seed:edge-cases",
-    "supabase:typegen": "pnpm dlx supabase@2.71.0 gen types typescript --local --schema auth,public,memories,storage > src/lib/supabase/database.types.ts",
+    "supabase:reset:dev": "pnpm supabase:db:reset && pnpm supabase:seed:dev",
+    "supabase:reset:e2e": "pnpm supabase:db:reset && pnpm supabase:seed:e2e",
+    "supabase:reset:payments": "pnpm supabase:db:reset && pnpm supabase:seed:payments",
+    "supabase:reset:calendar": "pnpm supabase:db:reset && pnpm supabase:seed:calendar",
+    "supabase:reset:edge-cases": "pnpm supabase:db:reset && pnpm supabase:seed:edge-cases",
+    "supabase:typegen": "pnpm dlx supabase@2.72.8 gen types --lang typescript --local --schema auth --schema public --schema memories --schema storage > src/lib/supabase/database.types.ts",
     "ops": "tsx scripts/ops.ts",
     "test:analyze": "pnpm ops test analyze failures",
     "test:analyze:all": "pnpm ops test analyze all",
