chore(otel): bump opentelemetry packages

--- a/package.json
+++ b/package.json
@@ -84,12 +84,13 @@
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.209.0",
-    "@opentelemetry/instrumentation": "^0.209.0",
-    "@opentelemetry/instrumentation-fetch": "^0.209.0",
-    "@opentelemetry/resources": "^2.3.0",
-    "@opentelemetry/sdk-trace-base": "^2.3.0",
-    "@opentelemetry/sdk-trace-web": "^2.3.0",
+    "@opentelemetry/context-zone": "2.4.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.210.0",
+    "@opentelemetry/instrumentation": "0.210.0",
+    "@opentelemetry/instrumentation-fetch": "0.210.0",
+    "@opentelemetry/resources": "2.4.0",
+    "@opentelemetry/sdk-trace-base": "2.4.0",
+    "@opentelemetry/sdk-trace-web": "2.4.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -150,6 +151,7 @@
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
     "web-vitals": "^5.1.0",
+    "zone.js": "0.16.0",
     "zod": "^4.3.5",
     "zustand": "^5.0.9"
   },
