--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@ai-sdk/anthropic": "3.0.23",
     "@ai-sdk/openai": "3.0.18",
     "@ai-sdk/provider": "3.0.5",
-    "@ai-sdk/react": "3.0.50",
+    "@ai-sdk/react": "3.0.51",
     "@ai-sdk/togetherai": "2.0.20",
     "@ai-sdk/xai": "3.0.33",
     "@hookform/resolvers": "^5.2.2",
@@ -112,14 +112,17 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@streamdown/code": "^1.0.1",
+    "@streamdown/math": "^1.0.1",
+    "@streamdown/mermaid": "^1.0.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
-    "@tanstack/react-query": "^5.90.19",
+    "@tanstack/react-query": "^5.90.20",
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.8",
     "@upstash/redis": "^1.36.1",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.48",
+    "ai": "6.0.49",
     "amadeus": "^11.0.0",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
@@ -131,6 +134,7 @@
     "ical.js": "^2.2.1",
     "import-in-the-middle": "2.0.5",
     "js-tiktoken": "^1.0.21",
+    "katex": "^0.16.27",
     "lucide-react": "^0.562.0",
     "mammoth": "^1.11.0",
     "motion": "12.27.5",
@@ -146,7 +150,7 @@
     "resend": "^6.7.0",
     "shiki": "^3.21.0",
     "sonner": "^2.0.7",
-    "streamdown": "^1.6.11",
+    "streamdown": "^2.1.0",
     "stripe": "20.2.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
@@ -156,7 +160,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
+    "@biomejs/biome": "^2.3.12",
     "@playwright/test": "^1.57.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
@@ -173,7 +177,7 @@
     "@types/google.maps": "^3.58.1",
     "@types/html-to-text": "^9.0.4",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^25.0.9",
+    "@types/node": "^24.10.9",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
