chore: upgrade Biome configuration to version 2.3.13 and refine ignored directories
- Update schema version from 2.3.12 to 2.3.13 in biome.json.
- Adjust ignored directories in biome.json to use negation patterns without trailing slashes.
- Update package.json and pnpm-lock.yaml to reflect the new Biome version.
- Refactor turbopack configuration in next.config.ts for clarity and consistency.
- Enhance release configuration for semantic-release with improved rules.

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.12/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.13/schema.json",
 
   "assist": {
     "actions": {
@@ -36,14 +36,14 @@
       "**/*.json",
       "**/*.css",
       "!**/out",
-      "!**/node_modules/**",
-      "!**/.next/**",
-      "!**/dist/**",
-      "!**/build/**",
-      "!**/coverage/**",
-      "!**/.turbo/**",
-      "!**/.vercel/**",
-      "!**/storybook-static/**"
+      "!**/node_modules",
+      "!**/.next",
+      "!**/dist",
+      "!**/build",
+      "!**/coverage",
+      "!**/.turbo",
+      "!**/.vercel",
+      "!**/storybook-static"
     ],
     "maxSize": 1048576
   },
