--- a/.env.local.example
+++ b/.env.local.example
@@ -13,6 +13,8 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=TripSage
 NEXT_PUBLIC_BASE_PATH=
+# Client telemetry is opt-in to avoid noisy console errors when a local collector isn't running.
+NEXT_PUBLIC_OTEL_CLIENT_ENABLED=false
 NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 
 # ---------------------------------------------------------------------------
