--- a/package.json
+++ b/package.json
@@ -227,9 +227,6 @@
       "undici": "5.29.0",
       "brace-expansion": ">=2.0.2"
     },
-    "ignoredBuiltDependencies": [
-      "esbuild",
-      "msw"
-    ]
+    "ignoredBuiltDependencies": ["esbuild", "msw"]
   }
 }
