fix(config): resolve biome diagnostics

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,32 +5,17 @@
     "incremental": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "noEmit": true,
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@schemas/*": [
-        "./src/domain/schemas/*"
-      ],
-      "@domain/*": [
-        "./src/domain/*"
-      ],
-      "@ai/*": [
-        "./src/ai/*"
-      ]
+      "@/*": ["./src/*"],
+      "@schemas/*": ["./src/domain/schemas/*"],
+      "@domain/*": ["./src/domain/*"],
+      "@ai/*": ["./src/ai/*"]
     },
-    "typeRoots": [
-      "./@types",
-      "./node_modules/@types"
-    ],
+    "typeRoots": ["./@types", "./node_modules/@types"],
     "plugins": [
       {
         "name": "next"
@@ -41,10 +26,7 @@
     "strict": true,
     "target": "ES2022"
   },
-  "exclude": [
-    "node_modules",
-    "opensrc"
-  ],
+  "exclude": ["node_modules", "opensrc"],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
