--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tripsage-ai-frontend",
   "version": "1.30.1",
   "private": true,
-  "packageManager": "pnpm@10.28.1",
+  "packageManager": "pnpm@10.28.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -75,12 +75,12 @@
     "pre-commit": "pnpm check:no-secrets:staged"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "3.0.28",
-    "@ai-sdk/openai": "3.0.21",
-    "@ai-sdk/provider": "3.0.5",
-    "@ai-sdk/react": "3.0.59",
-    "@ai-sdk/togetherai": "2.0.23",
-    "@ai-sdk/xai": "3.0.38",
+    "@ai-sdk/anthropic": "3.0.35",
+    "@ai-sdk/openai": "3.0.25",
+    "@ai-sdk/provider": "3.0.7",
+    "@ai-sdk/react": "3.0.70",
+    "@ai-sdk/togetherai": "2.0.29",
+    "@ai-sdk/xai": "3.0.46",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@opentelemetry/api": "^1.9.0",
@@ -118,11 +118,11 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.1",
     "@tanstack/react-query": "^5.90.20",
-    "@upstash/qstash": "^2.8.4",
+    "@upstash/qstash": "^2.9.0",
     "@upstash/ratelimit": "2.0.8",
     "@upstash/redis": "^1.36.1",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.57",
+    "ai": "6.0.68",
     "amadeus": "^11.0.0",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
@@ -132,7 +132,7 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
-    "import-in-the-middle": "2.0.5",
+    "import-in-the-middle": "2.0.6",
     "js-tiktoken": "^1.0.21",
     "katex": "^0.16.27",
     "lucide-react": "^0.562.0",
@@ -154,22 +154,23 @@
     "stripe": "20.2.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.2",
+    "vercel": "^50.9.6",
     "web-vitals": "^5.1.0",
     "zod": "^4.3.6",
     "zone.js": "0.16.0",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
-    "@playwright/test": "^1.58.0",
+    "@playwright/test": "^1.58.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/github": "^12.0.3",
     "@semantic-release/npm": "^13.1.3",
     "@semantic-release/release-notes-generator": "^14.1.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -180,17 +181,17 @@
     "@types/node": "^24.10.9",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@vitejs/plugin-react": "^5.1.3",
     "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "jsdom": "^27.4.0",
-    "knip": "5.82.1",
+    "knip": "5.83.0",
     "madge": "^8.0.0",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
-    "semantic-release": "^25.0.2",
+    "semantic-release": "^25.0.3",
     "simple-git-hooks": "^2.13.1",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
